Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-128272

New example quickcontrols\spreadsheets fails to compile on MSVC2022 x64

    XMLWordPrintable

Details

    • Windows
    • c2ff06f90 (dev), f0bfc90a6 (6.8)

    Description

      Install Qt 6.8.0 beta4 snapshot MSVC2022 x64 binaries, configure example quickcontrols\spreadsheets

      C:\Users\qt\RTA\Qt_6.8.0\6.8.0\msvc2022_64\bin\qt-cmake -S C:\Users\qt\RTA\Qt_6.8.0\Examples\Qt-6.8.0\quickcontrols\spreadsheets -B C:\Users\qt\RTA\Qt_6.8.0\Examples\Qt-6.8.0\quickcontrols\spreadsheets\bld_msvc2022_64 -GNinja -DCMAKE_BUILD_TYPE=Release 

      -> pass, compile

      cmake --build . --parallel in C:\Users\qt\RTA\Qt_6.8.0\Examples\Qt-6.8.0\quickcontrols\spreadsheets\bld_msvc2022_64 

      -> fail:

      [1/64] Copying HeaderToolBar.qml to C:/Users/qt/RTA/Qt_6.8.0/Examples/Qt-6.8.0/quickcontrols/spreadsheets/bld_msvc2022_64/Spreadsheets/HeaderToolBar.qml 
      [2/64] Copying HelpDialog.qml to C:/Users/qt/RTA/Qt_6.8.0/Examples/Qt-6.8.0/quickcontrols/spreadsheets/bld_msvc2022_64/Spreadsheets/HelpDialog.qml 
      [3/64] Copying TableCell.qml to C:/Users/qt/RTA/Qt_6.8.0/Examples/Qt-6.8.0/quickcontrols/spreadsheets/bld_msvc2022_64/Spreadsheets/TableCell.qml 
      [4/64] Copying ColumnHeaderView.qml to C:/Users/qt/RTA/Qt_6.8.0/Examples/Qt-6.8.0/quickcontrols/spreadsheets/bld_msvc2022_64/Spreadsheets/ColumnHeaderView.qml 
      [5/64] Copying RowHeaderView.qml to C:/Users/qt/RTA/Qt_6.8.0/Examples/Qt-6.8.0/quickcontrols/spreadsheets/bld_msvc2022_64/Spreadsheets/RowHeaderView.qml 
      [6/64] Copying Main.qml to C:/Users/qt/RTA/Qt_6.8.0/Examples/Qt-6.8.0/quickcontrols/spreadsheets/bld_msvc2022_64/Spreadsheets/Main.qml 
      [7/64] Copying icons/insert_row_above.svg to C:/Users/qt/RTA/Qt_6.8.0/Examples/Qt-6.8.0/quickcontrols/spreadsheets/bld_msvc2022_64/Spreadsheets/icons/insert_row_above.svg 
      [8/64] Copying icons/insert_column_left.svg to C:/Users/qt/RTA/Qt_6.8.0/Examples/Qt-6.8.0/quickcontrols/spreadsheets/bld_msvc2022_64/Spreadsheets/icons/insert_column_left.svg 
      [9/64] Copying HeaderViewTapHandler.qml to C:/Users/qt/RTA/Qt_6.8.0/Examples/Qt-6.8.0/quickcontrols/spreadsheets/bld_msvc2022_64/Spreadsheets/HeaderViewTapHandler.qml 
      [10/64] Copying icons/insert_column_right.svg to C:/Users/qt/RTA/Qt_6.8.0/Examples/Qt-6.8.0/quickcontrols/spreadsheets/bld_msvc2022_64/Spreadsheets/icons/insert_column_right.svg 
      [11/64] Copying icons/insert_row_below.svg to C:/Users/qt/RTA/Qt_6.8.0/Examples/Qt-6.8.0/quickcontrols/spreadsheets/bld_msvc2022_64/Spreadsheets/icons/insert_row_below.svg 
      [12/64] Copying icons/remove_column.svg to C:/Users/qt/RTA/Qt_6.8.0/Examples/Qt-6.8.0/quickcontrols/spreadsheets/bld_msvc2022_64/Spreadsheets/icons/remove_column.svg 
      [13/64] Copying icons/remove_row.svg to C:/Users/qt/RTA/Qt_6.8.0/Examples/Qt-6.8.0/quickcontrols/spreadsheets/bld_msvc2022_64/Spreadsheets/icons/remove_row.svg 
      [14/64] Copying icons/pan.svg to C:/Users/qt/RTA/Qt_6.8.0/Examples/Qt-6.8.0/quickcontrols/spreadsheets/bld_msvc2022_64/Spreadsheets/icons/pan.svg 
      [15/64] Copying icons/paste.svg to C:/Users/qt/RTA/Qt_6.8.0/Examples/Qt-6.8.0/quickcontrols/spreadsheets/bld_msvc2022_64/Spreadsheets/icons/paste.svg 
      [16/64] Copying icons/copy.svg to C:/Users/qt/RTA/Qt_6.8.0/Examples/Qt-6.8.0/quickcontrols/spreadsheets/bld_msvc2022_64/Spreadsheets/icons/copy.svg 
      [17/64] Copying icons/cut.svg to C:/Users/qt/RTA/Qt_6.8.0/Examples/Qt-6.8.0/quickcontrols/spreadsheets/bld_msvc2022_64/Spreadsheets/icons/cut.svg 
      [18/64] Copying icons/reset_reordering.svg to C:/Users/qt/RTA/Qt_6.8.0/Examples/Qt-6.8.0/quickcontrols/spreadsheets/bld_msvc2022_64/Spreadsheets/icons/reset_reordering.svg 
      [19/64] Copying icons/help.svg to C:/Users/qt/RTA/Qt_6.8.0/Examples/Qt-6.8.0/quickcontrols/spreadsheets/bld_msvc2022_64/Spreadsheets/icons/help.svg 
      [20/64] Copying icons/show.svg to C:/Users/qt/RTA/Qt_6.8.0/Examples/Qt-6.8.0/quickcontrols/spreadsheets/bld_msvc2022_64/Spreadsheets/icons/show.svg 
      [21/64] Copying icons/hide.svg to C:/Users/qt/RTA/Qt_6.8.0/Examples/Qt-6.8.0/quickcontrols/spreadsheets/bld_msvc2022_64/Spreadsheets/icons/hide.svg 
      [22/64] Running qmlimportscanner for SpreadsheetsExample 
      [23/64] Automatic MOC and UIC for target Spreadsheetsplugin 
      [24/64] Automatic MOC and UIC for target Spreadsheets 
      [25/64] Running AUTOMOC file extraction for target Spreadsheets 
      [26/64] Running rcc for resource qmake_Spreadsheets 
      [27/64] Running rcc for resource Spreadsheets_raw_qml_0 
      [28/64] Generating .rcc/qmlcache/Spreadsheets_qmlcache_loader.cpp 
      [29/64] Running moc --collect-json for target Spreadsheets 
      [30/64] Automatic QML type registration for target Spreadsheets 
      [31/64] Generating .rcc/qmlcache/Spreadsheets_HelpDialog_qml.cpp, .rcc/qmlcache/Spreadsheets_HelpDialog_qml.cpp.aotstats 
      [32/64] Generating .rcc/qmlcache/Spreadsheets_TableCell_qml.cpp, .rcc/qmlcache/Spreadsheets_TableCell_qml.cpp.aotstats 
      [33/64] Generating .rcc/qmlcache/Spreadsheets_HeaderToolBar_qml.cpp, .rcc/qmlcache/Spreadsheets_HeaderToolBar_qml.cpp.aotstats 
      [34/64] Generating .rcc/qmlcache/Spreadsheets_RowHeaderView_qml.cpp, .rcc/qmlcache/Spreadsheets_RowHeaderView_qml.cpp.aotstats 
      [35/64] Generating .rcc/qmlcache/Spreadsheets_ColumnHeaderView_qml.cpp, .rcc/qmlcache/Spreadsheets_ColumnHeaderView_qml.cpp.aotstats 
      [36/64] Generating .rcc/qmlcache/Spreadsheets_HeaderViewTapHandler_qml.cpp, .rcc/qmlcache/Spreadsheets_HeaderViewTapHandler_qml.cpp.aotstats 
      [37/64] Generating .rcc/qmlcache/Spreadsheets_Main_qml.cpp, .rcc/qmlcache/Spreadsheets_Main_qml.cpp.aotstats 
      [38/64] Building CXX object Spreadsheets\CMakeFiles\Spreadsheets.dir\.qt\rcc\qrc_qmake_Spreadsheets.cpp.obj 
      [39/64] Building CXX object Spreadsheets\CMakeFiles\Spreadsheets.dir\datamodel.cpp.obj 
      [40/64] Building CXX object Spreadsheets\CMakeFiles\Spreadsheets.dir\spreadcell.cpp.obj 
      [41/64] Building CXX object Spreadsheets\CMakeFiles\Spreadsheets.dir\spreadmimedataprovider.cpp.obj 
      [42/64] Building CXX object Spreadsheets\CMakeFiles\Spreadsheets.dir\spreadsheets_qmltyperegistrations.cpp.obj 
      [43/64] Building CXX object Spreadsheets\CMakeFiles\Spreadsheets.dir\spreadformula.cpp.obj 
      [44/64] Building CXX object Spreadsheets\CMakeFiles\Spreadsheets.dir\Spreadsheets_autogen\mocs_compilation.cpp.obj 
      [45/64] Building CXX object Spreadsheets\CMakeFiles\Spreadsheets.dir\.rcc\qmlcache\Spreadsheets_TableCell_qml.cpp.obj 
      [46/64] Building CXX object Spreadsheets\CMakeFiles\Spreadsheets.dir\.rcc\qmlcache\Spreadsheets_Main_qml.cpp.obj 
      [47/64] Building CXX object Spreadsheets\CMakeFiles\Spreadsheets.dir\.rcc\qmlcache\Spreadsheets_HeaderToolBar_qml.cpp.obj 
      [48/64] Building CXX object Spreadsheets\CMakeFiles\Spreadsheets.dir\.rcc\qmlcache\Spreadsheets_HelpDialog_qml.cpp.obj 
      [49/64] Building CXX object Spreadsheets\CMakeFiles\Spreadsheets.dir\.qt\rcc\qrc_Spreadsheets_raw_qml_0.cpp.obj 
      [50/64] Building CXX object Spreadsheets\CMakeFiles\Spreadsheets.dir\.rcc\qmlcache\Spreadsheets_qmlcache_loader.cpp.obj 
      [51/64] Building CXX object Spreadsheets\CMakeFiles\Spreadsheetsplugin.dir\Spreadsheetsplugin_autogen\mocs_compilation.cpp.obj 
      [52/64] Building CXX object Spreadsheets\CMakeFiles\Spreadsheets.dir\spreadmodel.cpp.obj 
      [53/64] Building CXX object Spreadsheets\CMakeFiles\Spreadsheets.dir\.rcc\qmlcache\Spreadsheets_ColumnHeaderView_qml.cpp.obj 
      [54/64] Building CXX object Spreadsheets\CMakeFiles\Spreadsheetsplugin.dir\Spreadsheetsplugin_SpreadsheetsPlugin.cpp.obj 
      [55/64] Building CXX object Spreadsheets\CMakeFiles\Spreadsheets.dir\.rcc\qmlcache\Spreadsheets_RowHeaderView_qml.cpp.obj 
      [56/64] Building CXX object Spreadsheets\CMakeFiles\Spreadsheets.dir\.rcc\qmlcache\Spreadsheets_HeaderViewTapHandler_qml.cpp.obj 
      [57/64] Linking CXX shared library Spreadsheets.dll
      FAILED: Spreadsheets.dll Spreadsheets/Spreadsheets.lib  
      cmd.exe /C "cd . && C:\CMake\bin\cmake.exe -E vs_link_dll --intdir=Spreadsheets\CMakeFiles\Spreadsheets.dir --rc=C:\PROGRA~2\WI3CF2~1\10\bin\100226~1.0\x64\rc.exe --mt=C:\PROGRA~2\WI3CF2~1\10\bin\100226~1.0\x64\mt.exe --manifests  -- C:\PROGRA~1\MICROS~3\2022\PROFES~1\VC\Tools\MSVC\1439~1.335\bin\Hostx64\x64\link.exe /nologo Spreadsheets\CMakeFiles\Spreadsheets.dir\Spreadsheets_autogen\mocs_compilation.cpp.obj Spreadsheets\CMakeFiles\Spreadsheets.dir\spreadsheets_qmltyperegistrations.cpp.obj Spreadsheets\CMakeFiles\Spreadsheets.dir\.qt\rcc\qrc_qmake_Spreadsheets.cpp.obj Spreadsheets\CMakeFiles\Spreadsheets.dir\datamodel.cpp.obj Spreadsheets\CMakeFiles\Spreadsheets.dir\spreadcell.cpp.obj Spreadsheets\CMakeFiles\Spreadsheets.dir\spreadformula.cpp.obj Spreadsheets\CMakeFiles\Spreadsheets.dir\spreadmimedataprovider.cpp.obj Spreadsheets\CMakeFiles\Spreadsheets.dir\spreadmodel.cpp.obj Spreadsheets\CMakeFiles\Spreadsheets.dir\.rcc\qmlcache\Spreadsheets_qmlcache_loader.cpp.obj Spreadsheets\CMakeFiles\Spreadsheets.dir\.rcc\qmlcache\Spreadsheets_Main_qml.cpp.obj Spreadsheets\CMakeFiles\Spreadsheets.dir\.rcc\qmlcache\Spreadsheets_TableCell_qml.cpp.obj Spreadsheets\CMakeFiles\Spreadsheets.dir\.rcc\qmlcache\Spreadsheets_HeaderToolBar_qml.cpp.obj Spreadsheets\CMakeFiles\Spreadsheets.dir\.rcc\qmlcache\Spreadsheets_HelpDialog_qml.cpp.obj Spreadsheets\CMakeFiles\Spreadsheets.dir\.rcc\qmlcache\Spreadsheets_ColumnHeaderView_qml.cpp.obj Spreadsheets\CMakeFiles\Spreadsheets.dir\.rcc\qmlcache\Spreadsheets_RowHeaderView_qml.cpp.obj Spreadsheets\CMakeFiles\Spreadsheets.dir\.rcc\qmlcache\Spreadsheets_HeaderViewTapHandler_qml.cpp.obj Spreadsheets\CMakeFiles\Spreadsheets.dir\.qt\rcc\qrc_Spreadsheets_raw_qml_0.cpp.obj  /out:Spreadsheets.dll /implib:Spreadsheets\Spreadsheets.lib /pdb:Spreadsheets.pdb /dll /version:0.0 /machine:x64 /INCREMENTAL:NO  C:\Users\qt\RTA\Qt_6.8.0\6.8.0\msvc2022_64\lib\Qt6Quick.lib  C:\Users\qt\RTA\Qt_6.8.0\6.8.0\msvc2022_64\lib\Qt6QmlMeta.lib  C:\Users\qt\RTA\Qt_6.8.0\6.8.0\msvc2022_64\lib\Qt6QmlWorkerScript.lib  C:\Users\qt\RTA\Qt_6.8.0\6.8.0\msvc2022_64\lib\Qt6QmlModels.lib  C:\Users\qt\RTA\Qt_6.8.0\6.8.0\msvc2022_64\lib\Qt6Qml.lib  C:\Users\qt\RTA\Qt_6.8.0\6.8.0\msvc2022_64\lib\Qt6Network.lib  ws2_32.lib  shell32.lib  C:\Users\qt\RTA\Qt_6.8.0\6.8.0\msvc2022_64\lib\Qt6OpenGL.lib  C:\Users\qt\RTA\Qt_6.8.0\6.8.0\msvc2022_64\lib\Qt6Gui.lib  C:\Users\qt\RTA\Qt_6.8.0\6.8.0\msvc2022_64\lib\Qt6Core.lib  mpr.lib  userenv.lib  d3d11.lib  dxgi.lib  dxguid.lib  d3d12.lib  user32.lib  kernel32.lib user32.lib gdi32.lib winspool.lib shell32.lib ole32.lib oleaut32.lib uuid.lib comdlg32.lib advapi32.lib  && cd ." 
      LINK: command "C:\PROGRA~1\MICROS~3\2022\PROFES~1\VC\Tools\MSVC\1439~1.335\bin\Hostx64\x64\link.exe /nologo Spreadsheets\CMakeFiles\Spreadsheets.dir\Spreadsheets_autogen\mocs_compilation.cpp.obj Spreadsheets\CMakeFiles\Spreadsheets.dir\spreadsheets_qmltyperegistrations.cpp.obj Spreadsheets\CMakeFiles\Spreadsheets.dir\.qt\rcc\qrc_qmake_Spreadsheets.cpp.obj Spreadsheets\CMakeFiles\Spreadsheets.dir\datamodel.cpp.obj Spreadsheets\CMakeFiles\Spreadsheets.dir\spreadcell.cpp.obj Spreadsheets\CMakeFiles\Spreadsheets.dir\spreadformula.cpp.obj Spreadsheets\CMakeFiles\Spreadsheets.dir\spreadmimedataprovider.cpp.obj Spreadsheets\CMakeFiles\Spreadsheets.dir\spreadmodel.cpp.obj Spreadsheets\CMakeFiles\Spreadsheets.dir\.rcc\qmlcache\Spreadsheets_qmlcache_loader.cpp.obj Spreadsheets\CMakeFiles\Spreadsheets.dir\.rcc\qmlcache\Spreadsheets_Main_qml.cpp.obj Spreadsheets\CMakeFiles\Spreadsheets.dir\.rcc\qmlcache\Spreadsheets_TableCell_qml.cpp.obj Spreadsheets\CMakeFiles\Spreadsheets.dir\.rcc\qmlcache\Spreadsheets_HeaderToolBar_qml.cpp.obj Spreadsheets\CMakeFiles\Spreadsheets.dir\.rcc\qmlcache\Spreadsheets_HelpDialog_qml.cpp.obj Spreadsheets\CMakeFiles\Spreadsheets.dir\.rcc\qmlcache\Spreadsheets_ColumnHeaderView_qml.cpp.obj Spreadsheets\CMakeFiles\Spreadsheets.dir\.rcc\qmlcache\Spreadsheets_RowHeaderView_qml.cpp.obj Spreadsheets\CMakeFiles\Spreadsheets.dir\.rcc\qmlcache\Spreadsheets_HeaderViewTapHandler_qml.cpp.obj Spreadsheets\CMakeFiles\Spreadsheets.dir\.qt\rcc\qrc_Spreadsheets_raw_qml_0.cpp.obj /out:Spreadsheets.dll /implib:Spreadsheets\Spreadsheets.lib /pdb:Spreadsheets.pdb /dll /version:0.0 /machine:x64 /INCREMENTAL:NO C:\Users\qt\RTA\Qt_6.8.0\6.8.0\msvc2022_64\lib\Qt6Quick.lib C:\Users\qt\RTA\Qt_6.8.0\6.8.0\msvc2022_64\lib\Qt6QmlMeta.lib C:\Users\qt\RTA\Qt_6.8.0\6.8.0\msvc2022_64\lib\Qt6QmlWorkerScript.lib C:\Users\qt\RTA\Qt_6.8.0\6.8.0\msvc2022_64\lib\Qt6QmlModels.lib C:\Users\qt\RTA\Qt_6.8.0\6.8.0\msvc2022_64\lib\Qt6Qml.lib C:\Users\qt\RTA\Qt_6.8.0\6.8.0\msvc2022_64\lib\Qt6Network.lib ws2_32.lib shell32.lib C:\Users\qt\RTA\Qt_6.8.0\6.8.0\msvc2022_64\lib\Qt6OpenGL.lib C:\Users\qt\RTA\Qt_6.8.0\6.8.0\msvc2022_64\lib\Qt6Gui.lib C:\Users\qt\RTA\Qt_6.8.0\6.8.0\msvc2022_64\lib\Qt6Core.lib mpr.lib userenv.lib d3d11.lib dxgi.lib dxguid.lib d3d12.lib user32.lib kernel32.lib user32.lib gdi32.lib winspool.lib shell32.lib ole32.lib oleaut32.lib uuid.lib comdlg32.lib advapi32.lib /MANIFEST:EMBED,ID=2" failed (exit code 1120) with the following output: 
         Creating library Spreadsheets\Spreadsheets.lib and object Spreadsheets\Spreadsheets.exp 
      spreadcell.cpp.obj : error LNK2019: unresolved external symbol "public: bool __cdecl Formula::includesLoop(class SpreadModel *,struct DataModel const *,class QSet<int> *)const " (?includesLoop@Formula@@QEBA_NPEAVSpreadModel@@PEBUDataModel@@PEAV?$QSet@H@@@Z) referenced in function "private: class QString __cdecl SpreadCell::displayText(void)const " (?displayText@SpreadCell@@AEBA?AVQString@@XZ)  
      Spreadsheets.dll : fatal error LNK1120: 1 unresolved externals  
      ninja: build stopped: subcommand failed. 

      Passes with GCC, macOS, MinGW and LLVM-MinGW.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mhqanbari MohammadHossein Qanbari
            joaijala Johanna Äijälä
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes