examples/quickcontrols/spreadsheets/Spreadsheets/spreadcell.cpp
@@ -1,6 +1,7 @@
 // Copyright (C) 2024 The Qt Company Ltd.
 // SPDX-License-Identifier: LicenseRef-Qt-Commercial OR BSD-3-Clause
 
+#include "spreadformula.h"
 #include "spreadcell.h"
 #include "spreadrole.h"
 #include "spreadmodel.h"
