examples/quickcontrols/spreadsheets/Spreadsheets/spreadmodel.cpp
@@ -1,6 +1,7 @@
 // Copyright (C) 2024 The Qt Company Ltd.
 // SPDX-License-Identifier: LicenseRef-Qt-Commercial OR BSD-3-Clause
 
+#include "spreadformula.h"
 #include "spreadmodel.h"
 #include "spreadrole.h"
 
